version/2.1/_sources/examples/gallery_examples/03-exporting/export_project.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples\gallery_examples\03-exporting\export_project.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_gallery_examples_03-exporting_export_project.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_gallery_examples_03-exporting_export_project.py:


.. _ref_sherlock_project_export:

=======================
Sherlock Project Export
=======================

This example demonstrates how to connect to the Sherlock gRPC service, import a project,
and export the project in multiple configurations.

Description
Sherlock's gRPC API enables automation of various workflows, including project export.
This script demonstrates how to:
- Connect to the Sherlock service.
- Import a tutorial project ZIP archive.
- Export a project with different configurations.

.. GENERATED FROM PYTHON SOURCE LINES 42-54

.. code-block:: Python



    import os

    from examples.examples_globals import get_sherlock_tutorial_path, get_temp_dir

    from ansys.sherlock.core import launcher
    from ansys.sherlock.core.errors import (
        SherlockExportProjectError,
        SherlockImportProjectZipArchiveError,
    )








.. GENERATED FROM PYTHON SOURCE LINES 56-59

Connect to Sherlock
===================
Connect to the Sherlock service and ensure proper initialization.

.. GENERATED FROM PYTHON SOURCE LINES 59-62

.. code-block:: Python


    sherlock = launcher.connect(port=9092, timeout=10)



.. rst-class:: sphx-glr-script-out

.. code-block:: pytb

    Traceback (most recent call last):
      File "C:\Users\ansys\actions-runner\_work\pysherlock\pysherlock\examples\03-exporting\export_project.py", line 60, in <module>
        sherlock = launcher.connect(port=9092, timeout=10)
      File "C:\Users\ansys\actions-runner\_work\pysherlock\pysherlock\.venv\Lib\site-packages\ansys\sherlock\core\launcher.py", line 324, in connect
        raise e
      File "C:\Users\ansys\actions-runner\_work\pysherlock\pysherlock\.venv\Lib\site-packages\ansys\sherlock\core\launcher.py", line 298, in connect
        channel = _connect_grpc_channel(
            host=LOCALHOST,
        ...<4 lines>...
            certs_dir=certs_dir,
        )
      File "C:\Users\ansys\actions-runner\_work\pysherlock\pysherlock\.venv\Lib\site-packages\ansys\sherlock\core\launcher.py", line 369, in _connect_grpc_channel
        channel = create_channel(
            transport_mode=transport_mode,
        ...<9 lines>...
            ],
        )
      File "C:\Users\ansys\actions-runner\_work\pysherlock\pysherlock\.venv\Lib\site-packages\ansys\sherlock\core\utils\cyberchannel.py", line 149, in create_channel
        return create_mtls_channel(host, port, certs_dir, cert_files, grpc_options)
      File "C:\Users\ansys\actions-runner\_work\pysherlock\pysherlock\.venv\Lib\site-packages\ansys\sherlock\core\utils\cyberchannel.py", line 364, in create_mtls_channel
        raise FileNotFoundError(error_message) from e
    FileNotFoundError: Certificate file not found: certs\ca.crt. Ensure that the certificates are present in the 'certs' folder or set the 'ANSYS_GRPC_CERTIFICATES' environment variable.




.. GENERATED FROM PYTHON SOURCE LINES 63-66

Delete Project
==============
Delete the project if it already exists.

.. GENERATED FROM PYTHON SOURCE LINES 66-73

.. code-block:: Python


    try:
        sherlock.project.delete_project("Test")
        print("Project deleted successfully.")
    except Exception:
        pass


.. GENERATED FROM PYTHON SOURCE LINES 74-77

Import Tutorial Project
=======================
Import a sample project ZIP archive provided with the Sherlock installation.

.. GENERATED FROM PYTHON SOURCE LINES 77-88

.. code-block:: Python


    try:
        sherlock.project.import_project_zip_archive(
            project="Test",
            category="Demos",
            archive_file=os.path.join(get_sherlock_tutorial_path(), "Auto Relay Project.zip"),
        )
        print("Tutorial project imported successfully.")
    except SherlockImportProjectZipArchiveError as e:
        print(f"Error importing project: {e}")


.. GENERATED FROM PYTHON SOURCE LINES 89-92

Export Project
==============
Export the imported project with different configurations.

.. GENERATED FROM PYTHON SOURCE LINES 92-128

.. code-block:: Python


    # Export with all options enabled
    try:
        sherlock.project.export_project(
            project_name="Test",
            export_design_files=True,
            export_result_files=True,
            export_archive_results=True,
            export_user_files=True,
            export_log_files=True,
            export_system_data=True,
            export_file_dir=get_temp_dir(),
            export_file_name="Exported_Project_All.zip",
            overwrite_existing_file=True,
        )
        print("Project exported successfully with all options enabled.")
    except SherlockExportProjectError as e:
        print(f"Error exporting project (all options): {e}")

    # Export with limited options
    try:
        sherlock.project.export_project(
            project_name="Test",
            export_design_files=True,
            export_result_files=False,
            export_archive_results=False,
            export_user_files=False,
            export_log_files=False,
            export_system_data=False,
            export_file_dir=get_temp_dir(),
            export_file_name="Exported_Project_Limited.zip",
            overwrite_existing_file=True,
        )
        print("Project exported successfully with limited options.")
    except SherlockExportProjectError as e:
        print(f"Error exporting project (limited options): {e}")


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.006 seconds)


.. _sphx_glr_download_examples_gallery_examples_03-exporting_export_project.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: export_project.ipynb <export_project.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: export_project.py <export_project.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: export_project.zip <export_project.zip>`
